--- a/public/assets/css/haras_grey_block.css
+++ b/public/assets/css/haras_grey_block.css
@@ -21,4 +21,11 @@
 .haras-grey-text {
     display: flex;
     flex-wrap: wrap;
+    padding: 20px;
+}
+
+li {
+    list-style: '★';
+    padding: 10px;
+    align-self: center;
 }
