--- a/src/View/User/Includes/_carousel.html.twig
+++ b/src/View/User/Includes/_carousel.html.twig
@@ -1,4 +1,4 @@
-<div class="carousel mt-5 pt-5">
+<div class="carousel pt-5">
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             {% for image in images %}
