--- a/public/assets/css/course.css
+++ b/public/assets/css/course.css
@@ -22,6 +22,11 @@
     font-size: calc(var(--font-size) * 1.5);
 }
 
+.content-page {
+    z-index: 1;
+    margin-top: -50px;
+}
+
 @media (min-width: 1000px) {
     .content-page {
         --width: 95%;
