--- a/public/assets/css/haras.css
+++ b/public/assets/css/haras.css
@@ -2,28 +2,31 @@
 @import 'haras_grey_block.css';
 @import 'haras_white_block.css';
 
-@media (min-width:1000px) {
+.content-page {
+    z-index: 1;
+    margin-top: -50px;
+}
+
+@media (min-width: 1000px) {
     .content-page {
-        --padding-bottom: 40px;
         --width: 95%;
+        --padding-bottom: 40px;
+        --min-height: 100%;
         display: flex;
-        align-items: center;
         justify-content: center;
         width: var(--width);
         padding-bottom: var(--padding-bottom);
+        min-height: var(--min-height);
     }
-
     .left-page {
-        --height: 100vh;
-        --width:100vw;
+        --width: 100vw;
+        --min-height: 120vh;
         display: flex;
         justify-content: flex-end;
-        height: var(--height);
         width: var(--width);
+        min-height: var(--min-height);
     }
-
     .right-page {
-        --min-height: 100vh;
         --width: 60vw;
         display: flex;
         min-height: var(--min-height);
