--- a/src/View/User/Includes/_haras_grey_block.html.twig
+++ b/src/View/User/Includes/_haras_grey_block.html.twig
@@ -5,17 +5,17 @@
                 INFRASTRUCTURES
             </h2>
             <ul class="haras-grey-text col-sm-8 offset-sm-2">
-                <li class="mb-2">Un terrain de cross niveau amateur</li>
-                <li class="mb-2">Une écurie de club de 10 boxes, un abri</li>
-                <li class="mb-2">Une écurie propriétaire de 10 boxes grand confort</li>
-                <li class="mb-2">Une sellerie chevaux et une poneys</li>
-                <li class="mb-2">Un manège 35×20 et un terrain de trec</li>
-                <li class="mb-2">Nombreux chemins de randonnées</li>
-                <li class="mb-2">Une écurie élevage de 3 boxes et nombreuses patures</li>
-                <li class="mb-2">Une salle de club pour l’organisation d’anniversaire, de réunion…</li>
-                <li class="mb-2">Une aire de maréchalerie</li>
-                <li class="mb-2">Un gîte pouvant accueillir 10 cavaliers</li>
-                <li class="mb-2">Chevaux de club et Poneys vivent au pré toute l’année sur 40ha</li>
+                <li class="grey-block mb-2">Un terrain de cross niveau amateur</li>
+                <li class="grey-block mb-2">Une écurie de club de 10 boxes, un abri</li>
+                <li class="grey-block mb-2">Une écurie propriétaire de 10 boxes grand confort</li>
+                <li class="grey-block mb-2">Une sellerie chevaux et une poneys</li>
+                <li class="grey-block mb-2">Un manège 35×20 et un terrain de trec</li>
+                <li class="grey-block mb-2">Nombreux chemins de randonnées</li>
+                <li class="grey-block mb-2">Une écurie élevage de 3 boxes et nombreuses patures</li>
+                <li class="grey-block mb-2">Une salle de club pour l’organisation d’anniversaire, de réunion…</li>
+                <li class="grey-block mb-2">Une aire de maréchalerie</li>
+                <li class="grey-block mb-2">Un gîte pouvant accueillir 10 cavaliers</li>
+                <li class="grey-block mb-2">Chevaux de club et Poneys vivent au pré toute l’année sur 40ha</li>
             </ul>
         </div>
     </div>
