--- a/src/View/User/Includes/_stage_white_block.html.twig
+++ b/src/View/User/Includes/_stage_white_block.html.twig
@@ -13,7 +13,9 @@
         </div>
         <div class="white-block-title-text col-12">
             <p class="white-block-text">
+            <h2 class="tab-title">
                 Contexte:
+            </h2>
                 20 <span>poneys</span> aux écuries, distribution des rations de céréales.
                 Hippologie et théorie en salle ou aux écuries.
                 Préparation des <span>poneys</span>, pansage, brossage, sellage....
