--- a/src/View/User/Includes/_stage_white_block.html.twig
+++ b/src/View/User/Includes/_stage_white_block.html.twig
@@ -14,7 +14,7 @@
         <div class="white-block-title-text col-12">
             <p class="white-block-text">
             <h2 class="tab-title">
-                Contexte:
+                CONTEXTE
             </h2>
                 20 <span>poneys</span> aux écuries, distribution des rations de céréales.
                 Hippologie et théorie en salle ou aux écuries.
