--- a/src/View/Admin/Includes/_formulary_stage.html.twig
+++ b/src/View/Admin/Includes/_formulary_stage.html.twig
@@ -45,7 +45,7 @@
         <div class="form-group mb-3">
             <label for="age">
                 <span class="text-danger">*</span>
-                age minimum
+                Âge minimum
             </label>
             <input class="form-control" type="text" name="age" id="age" required value="{{ formulary.age }}" aria-required="true" aria-describedby="ageHelp">
             <div id="ageHelp" class="form-text ps-2">Minimum 1 an</div>
