--- a/src/View/User/Includes/_stage_white_block.html.twig
+++ b/src/View/User/Includes/_stage_white_block.html.twig
@@ -1,7 +1,7 @@
 {% block stage_white_block %}
     <div class="stage-white-block-section col-xl-8 col-lg-11 offset-lg-1 m-0 col-sm-12">
         <div class="white-block-title-text">
-            <h2 class="tab-title">
+            <h2 class="tab-title text-center">
                 PRÉSENTATION DES STAGES DE PONEY
             </h2>
             <p class="white-block-text col-12">
@@ -12,7 +12,7 @@
             </p>
         </div>
         <div class="white-block-title-text col-12">
-            <h2 class="tab-title">
+            <h2 class="tab-title text-center pt-3">
                 CONTEXTE
             </h2>
             <p class="white-block-text">
