--- a/public/assets/css/stage_white_block.css
+++ b/public/assets/css/stage_white_block.css
@@ -11,7 +11,7 @@
     min-height: var(--min-height);
 }
 
-.white-block-title {
+.tab-title {
     --margin-top: 0.8em;
     --font-size: 1.2em;
     margin-top: var(--margin-top);
